--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -7,17 +7,48 @@ networks:
 
 services:
 
-  # Backend
-  tactbee_be:
-    container_name: tactbee_api_service
+  # Backend - Java
+  # wordmeter_be:
+  #   container_name: wordmeter_api_service
+  #   build:
+  #     context: ../backend
+  #   ports:
+  #     - "${WMETER_BACKEND_PORT}:${WMETER_BACKEND_PORT}"
+  #   volumes:
+  #     - ../backend:/app
+  #   environment:
+  #     WMETER_BACKEND_PORT: ${WMETER_BACKEND_PORT}
+  #   networks:
+  #     - wordmeter_network
+
+  # Backend - Flask
+  wordmeter_be:
+    container_name: wordmeter_api_service
     build:
-      context: ../backend
+      context: ../backend-flask
     ports:
       - "${WMETER_BACKEND_PORT}:${WMETER_BACKEND_PORT}"
     volumes:
-      - ../backend:/app
+      - ../backend-flask:/app
     environment:
       WMETER_BACKEND_PORT: ${WMETER_BACKEND_PORT}
+    networks:
+      - wordmeter_network
+
+  # MLMeter
+  wordmeter_mlmeter:
+    container_name: wordmeter_mlmeter_service
+    build:
+      context: ../mlmeter
+    ports:
+      - "${WMETER_MLMETER_PORT}:${WMETER_MLMETER_PORT}"
+    volumes:
+      - ../mlmeter:/app
+    environment:
+      WMETER_MLMETER_PORT: ${WMETER_MLMETER_PORT}
+      BACKEND_BASE: 'http://wordmeter_api_service:${WMETER_BACKEND_PORT}/'
+    depends_on:
+      - wordmeter_be
     networks:
       - wordmeter_network
 
